// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`typeSearch _include queryParams={"_include":"*"}: msearch queries 1`] = `
[
  [
    {
      "body": [
        {
          "index": "patient-alias",
        },
        {
          "query": {
            "bool": {
              "filter": [
                {
                  "terms": {
                    "id": [
                      "patient-id-333",
                    ],
                  },
                },
                {
                  "match": {
                    "someFieldThatTellsIfTheResourceIsActive": "AVAILABLE",
                  },
                },
              ],
            },
          },
          "size": 1000,
        },
        {
          "index": "practitioner-alias",
        },
        {
          "query": {
            "bool": {
              "filter": [
                {
                  "terms": {
                    "id": [
                      "practitioner-id-222",
                    ],
                  },
                },
                {
                  "match": {
                    "someFieldThatTellsIfTheResourceIsActive": "AVAILABLE",
                  },
                },
              ],
            },
          },
          "size": 1000,
        },
        {
          "index": "practitionerrole-alias",
        },
        {
          "query": {
            "bool": {
              "filter": [
                {
                  "terms": {
                    "id": [
                      "practitionerRole-id-555",
                    ],
                  },
                },
                {
                  "match": {
                    "someFieldThatTellsIfTheResourceIsActive": "AVAILABLE",
                  },
                },
              ],
            },
          },
          "size": 1000,
        },
      ],
    },
  ],
]
`;

exports[`typeSearch _include queryParams={"_include":"*"}: search queries 1`] = `
[
  [
    {
      "body": {
        "query": {
          "bool": {
            "filter": [
              {
                "match": {
                  "someFieldThatTellsIfTheResourceIsActive": "AVAILABLE",
                },
              },
            ],
            "must": [],
          },
        },
      },
      "from": 0,
      "index": "medicationrequest-alias",
      "size": 20,
      "track_total_hits": true,
    },
  ],
]
`;

exports[`typeSearch _include queryParams={"_include":"MedicationRequest:subject"}: msearch queries 1`] = `
[
  [
    {
      "body": [
        {
          "index": "patient-alias",
        },
        {
          "query": {
            "bool": {
              "filter": [
                {
                  "terms": {
                    "id": [
                      "patient-id-333",
                    ],
                  },
                },
                {
                  "match": {
                    "someFieldThatTellsIfTheResourceIsActive": "AVAILABLE",
                  },
                },
              ],
            },
          },
          "size": 1000,
        },
      ],
    },
  ],
]
`;

exports[`typeSearch _include queryParams={"_include":"MedicationRequest:subject"}: search queries 1`] = `
[
  [
    {
      "body": {
        "query": {
          "bool": {
            "filter": [
              {
                "match": {
                  "someFieldThatTellsIfTheResourceIsActive": "AVAILABLE",
                },
              },
            ],
            "must": [],
          },
        },
      },
      "from": 0,
      "index": "medicationrequest-alias",
      "size": 20,
      "track_total_hits": true,
    },
  ],
]
`;

exports[`typeSearch _include queryParams={"_include":"MedicationRequest:subject:Group"}: msearch queries 1`] = `[]`;

exports[`typeSearch _include queryParams={"_include":"MedicationRequest:subject:Group"}: search queries 1`] = `
[
  [
    {
      "body": {
        "query": {
          "bool": {
            "filter": [
              {
                "match": {
                  "someFieldThatTellsIfTheResourceIsActive": "AVAILABLE",
                },
              },
            ],
            "must": [],
          },
        },
      },
      "from": 0,
      "index": "medicationrequest-alias",
      "size": 20,
      "track_total_hits": true,
    },
  ],
]
`;

exports[`typeSearch _include queryParams={"_include":["MedicationRequest:subject","MedicationRequest:intended-performer"]}: msearch queries 1`] = `
[
  [
    {
      "body": [
        {
          "index": "patient-alias",
        },
        {
          "query": {
            "bool": {
              "filter": [
                {
                  "terms": {
                    "id": [
                      "patient-id-333",
                    ],
                  },
                },
                {
                  "match": {
                    "someFieldThatTellsIfTheResourceIsActive": "AVAILABLE",
                  },
                },
              ],
            },
          },
          "size": 1000,
        },
        {
          "index": "practitioner-alias",
        },
        {
          "query": {
            "bool": {
              "filter": [
                {
                  "terms": {
                    "id": [
                      "practitioner-id-222",
                    ],
                  },
                },
                {
                  "match": {
                    "someFieldThatTellsIfTheResourceIsActive": "AVAILABLE",
                  },
                },
              ],
            },
          },
          "size": 1000,
        },
      ],
    },
  ],
]
`;

exports[`typeSearch _include queryParams={"_include":["MedicationRequest:subject","MedicationRequest:intended-performer"]}: search queries 1`] = `
[
  [
    {
      "body": {
        "query": {
          "bool": {
            "filter": [
              {
                "match": {
                  "someFieldThatTellsIfTheResourceIsActive": "AVAILABLE",
                },
              },
            ],
            "must": [],
          },
        },
      },
      "from": 0,
      "index": "medicationrequest-alias",
      "size": 20,
      "track_total_hits": true,
    },
  ],
]
`;

exports[`typeSearch _include queryParams={"_include":["MedicationRequest:subject","MedicationRequest:subject"]}: msearch queries 1`] = `
[
  [
    {
      "body": [
        {
          "index": "patient-alias",
        },
        {
          "query": {
            "bool": {
              "filter": [
                {
                  "terms": {
                    "id": [
                      "patient-id-333",
                    ],
                  },
                },
                {
                  "match": {
                    "someFieldThatTellsIfTheResourceIsActive": "AVAILABLE",
                  },
                },
              ],
            },
          },
          "size": 1000,
        },
      ],
    },
  ],
]
`;

exports[`typeSearch _include queryParams={"_include":["MedicationRequest:subject","MedicationRequest:subject"]}: search queries 1`] = `
[
  [
    {
      "body": {
        "query": {
          "bool": {
            "filter": [
              {
                "match": {
                  "someFieldThatTellsIfTheResourceIsActive": "AVAILABLE",
                },
              },
            ],
            "must": [],
          },
        },
      },
      "from": 0,
      "index": "medicationrequest-alias",
      "size": 20,
      "track_total_hits": true,
    },
  ],
]
`;

exports[`typeSearch _include search param with array fields: msearch queries 1`] = `
[
  [
    {
      "body": [
        {
          "index": "location-alias",
        },
        {
          "query": {
            "bool": {
              "filter": [
                {
                  "terms": {
                    "id": [
                      "location-id-111",
                      "location-id-222",
                    ],
                  },
                },
                {
                  "match": {
                    "someFieldThatTellsIfTheResourceIsActive": "AVAILABLE",
                  },
                },
              ],
            },
          },
          "size": 1000,
        },
      ],
    },
  ],
]
`;

exports[`typeSearch _include search param with array fields: search queries 1`] = `
[
  [
    {
      "body": {
        "query": {
          "bool": {
            "filter": [
              {
                "match": {
                  "someFieldThatTellsIfTheResourceIsActive": "AVAILABLE",
                },
              },
            ],
            "must": [],
          },
        },
      },
      "from": 0,
      "index": "encounter-alias",
      "size": 20,
      "track_total_hits": true,
    },
  ],
]
`;

exports[`typeSearch _include wildcard include with restrictive allowed resource types: msearch queries 1`] = `[]`;

exports[`typeSearch _include wildcard include with restrictive allowed resource types: search queries 1`] = `
[
  [
    {
      "body": {
        "query": {
          "bool": {
            "filter": [
              {
                "match": {
                  "someFieldThatTellsIfTheResourceIsActive": "AVAILABLE",
                },
              },
            ],
            "must": [],
          },
        },
      },
      "from": 0,
      "index": "medicationrequest-alias",
      "size": 20,
      "track_total_hits": true,
    },
  ],
]
`;

exports[`typeSearch _include:iterate: msearch queries 1`] = `
[
  [
    {
      "body": [
        {
          "index": "patient-alias",
          "preference": "CUSTOMER_SESSION_ID",
        },
        {
          "query": {
            "bool": {
              "filter": [
                {
                  "terms": {
                    "id": [
                      "patient-id-333",
                    ],
                  },
                },
                {
                  "match": {
                    "someFieldThatTellsIfTheResourceIsActive": "AVAILABLE",
                  },
                },
              ],
            },
          },
          "size": 1000,
        },
      ],
    },
  ],
  [
    {
      "body": [
        {
          "index": "organization-alias",
          "preference": "CUSTOMER_SESSION_ID",
        },
        {
          "query": {
            "bool": {
              "filter": [
                {
                  "terms": {
                    "id": [
                      "org-id-111",
                    ],
                  },
                },
                {
                  "match": {
                    "someFieldThatTellsIfTheResourceIsActive": "AVAILABLE",
                  },
                },
              ],
            },
          },
          "size": 1000,
        },
      ],
    },
  ],
]
`;

exports[`typeSearch _include:iterate: search queries 1`] = `
[
  [
    {
      "body": {
        "query": {
          "bool": {
            "filter": [
              {
                "match": {
                  "someFieldThatTellsIfTheResourceIsActive": "AVAILABLE",
                },
              },
            ],
            "must": [],
          },
        },
      },
      "from": 0,
      "index": "medicationrequest-alias",
      "preference": "CUSTOMER_SESSION_ID",
      "size": 20,
      "track_total_hits": true,
    },
  ],
]
`;

exports[`typeSearch _revinclude queryParams={"_revinclude":"*"}: msearch queries 1`] = `
[
  [
    {
      "body": [
        {
          "index": "communication-alias",
        },
        {
          "query": {
            "bool": {
              "filter": [
                {
                  "terms": {
                    "basedOn.reference.keyword": [
                      "MedicationRequest/medicationrequest-id-111",
                    ],
                  },
                },
                {
                  "match": {
                    "someFieldThatTellsIfTheResourceIsActive": "AVAILABLE",
                  },
                },
              ],
            },
          },
          "size": 1000,
        },
        {
          "index": "communication-alias",
        },
        {
          "query": {
            "bool": {
              "filter": [
                {
                  "terms": {
                    "partOf.reference.keyword": [
                      "MedicationRequest/medicationrequest-id-111",
                    ],
                  },
                },
                {
                  "match": {
                    "someFieldThatTellsIfTheResourceIsActive": "AVAILABLE",
                  },
                },
              ],
            },
          },
          "size": 1000,
        },
        {
          "index": "immunizationrecommendation-alias",
        },
        {
          "query": {
            "bool": {
              "filter": [
                {
                  "terms": {
                    "recommendation.supportingPatientInformation.reference.keyword": [
                      "MedicationRequest/medicationrequest-id-111",
                    ],
                  },
                },
                {
                  "match": {
                    "someFieldThatTellsIfTheResourceIsActive": "AVAILABLE",
                  },
                },
              ],
            },
          },
          "size": 1000,
        },
        {
          "index": "medicationadministration-alias",
        },
        {
          "query": {
            "bool": {
              "filter": [
                {
                  "terms": {
                    "request.reference.keyword": [
                      "MedicationRequest/medicationrequest-id-111",
                    ],
                  },
                },
                {
                  "match": {
                    "someFieldThatTellsIfTheResourceIsActive": "AVAILABLE",
                  },
                },
              ],
            },
          },
          "size": 1000,
        },
        {
          "index": "provenance-alias",
        },
        {
          "query": {
            "bool": {
              "filter": [
                {
                  "terms": {
                    "entity.what.reference.keyword": [
                      "MedicationRequest/medicationrequest-id-111",
                    ],
                  },
                },
                {
                  "match": {
                    "someFieldThatTellsIfTheResourceIsActive": "AVAILABLE",
                  },
                },
              ],
            },
          },
          "size": 1000,
        },
        {
          "index": "provenance-alias",
        },
        {
          "query": {
            "bool": {
              "filter": [
                {
                  "terms": {
                    "target.reference.keyword": [
                      "MedicationRequest/medicationrequest-id-111",
                    ],
                  },
                },
                {
                  "match": {
                    "someFieldThatTellsIfTheResourceIsActive": "AVAILABLE",
                  },
                },
              ],
            },
          },
          "size": 1000,
        },
      ],
    },
  ],
]
`;

exports[`typeSearch _revinclude queryParams={"_revinclude":"*"}: search queries 1`] = `
[
  [
    {
      "body": {
        "query": {
          "bool": {
            "filter": [
              {
                "match": {
                  "someFieldThatTellsIfTheResourceIsActive": "AVAILABLE",
                },
              },
            ],
            "must": [],
          },
        },
      },
      "from": 0,
      "index": "medicationrequest-alias",
      "size": 20,
      "track_total_hits": true,
    },
  ],
]
`;

exports[`typeSearch _revinclude queryParams={"_revinclude":"MedicationAdministration:request"}: msearch queries 1`] = `
[
  [
    {
      "body": [
        {
          "index": "medicationadministration-alias",
        },
        {
          "query": {
            "bool": {
              "filter": [
                {
                  "terms": {
                    "request.reference.keyword": [
                      "MedicationRequest/medicationrequest-id-111",
                    ],
                  },
                },
                {
                  "match": {
                    "someFieldThatTellsIfTheResourceIsActive": "AVAILABLE",
                  },
                },
              ],
            },
          },
          "size": 1000,
        },
      ],
    },
  ],
]
`;

exports[`typeSearch _revinclude queryParams={"_revinclude":"MedicationAdministration:request"}: search queries 1`] = `
[
  [
    {
      "body": {
        "query": {
          "bool": {
            "filter": [
              {
                "match": {
                  "someFieldThatTellsIfTheResourceIsActive": "AVAILABLE",
                },
              },
            ],
            "must": [],
          },
        },
      },
      "from": 0,
      "index": "medicationrequest-alias",
      "size": 20,
      "track_total_hits": true,
    },
  ],
]
`;

exports[`typeSearch _revinclude queryParams={"_revinclude":"MedicationAdministration:request:MedicationRequest"}: msearch queries 1`] = `
[
  [
    {
      "body": [
        {
          "index": "medicationadministration-alias",
        },
        {
          "query": {
            "bool": {
              "filter": [
                {
                  "terms": {
                    "request.reference.keyword": [
                      "MedicationRequest/medicationrequest-id-111",
                    ],
                  },
                },
                {
                  "match": {
                    "someFieldThatTellsIfTheResourceIsActive": "AVAILABLE",
                  },
                },
              ],
            },
          },
          "size": 1000,
        },
      ],
    },
  ],
]
`;

exports[`typeSearch _revinclude queryParams={"_revinclude":"MedicationAdministration:request:MedicationRequest"}: search queries 1`] = `
[
  [
    {
      "body": {
        "query": {
          "bool": {
            "filter": [
              {
                "match": {
                  "someFieldThatTellsIfTheResourceIsActive": "AVAILABLE",
                },
              },
            ],
            "must": [],
          },
        },
      },
      "from": 0,
      "index": "medicationrequest-alias",
      "size": 20,
      "track_total_hits": true,
    },
  ],
]
`;

exports[`typeSearch _revinclude queryParams={"_revinclude":["MedicationAdministration:request","MedicationAdministration:request"]}: msearch queries 1`] = `
[
  [
    {
      "body": [
        {
          "index": "medicationadministration-alias",
        },
        {
          "query": {
            "bool": {
              "filter": [
                {
                  "terms": {
                    "request.reference.keyword": [
                      "MedicationRequest/medicationrequest-id-111",
                    ],
                  },
                },
                {
                  "match": {
                    "someFieldThatTellsIfTheResourceIsActive": "AVAILABLE",
                  },
                },
              ],
            },
          },
          "size": 1000,
        },
      ],
    },
  ],
]
`;

exports[`typeSearch _revinclude queryParams={"_revinclude":["MedicationAdministration:request","MedicationAdministration:request"]}: search queries 1`] = `
[
  [
    {
      "body": {
        "query": {
          "bool": {
            "filter": [
              {
                "match": {
                  "someFieldThatTellsIfTheResourceIsActive": "AVAILABLE",
                },
              },
            ],
            "must": [],
          },
        },
      },
      "from": 0,
      "index": "medicationrequest-alias",
      "size": 20,
      "track_total_hits": true,
    },
  ],
]
`;

exports[`typeSearch _revinclude queryParams={"_revinclude":["MedicationAdministration:request","Provenance:target"]}: msearch queries 1`] = `
[
  [
    {
      "body": [
        {
          "index": "medicationadministration-alias",
        },
        {
          "query": {
            "bool": {
              "filter": [
                {
                  "terms": {
                    "request.reference.keyword": [
                      "MedicationRequest/medicationrequest-id-111",
                    ],
                  },
                },
                {
                  "match": {
                    "someFieldThatTellsIfTheResourceIsActive": "AVAILABLE",
                  },
                },
              ],
            },
          },
          "size": 1000,
        },
        {
          "index": "provenance-alias",
        },
        {
          "query": {
            "bool": {
              "filter": [
                {
                  "terms": {
                    "target.reference.keyword": [
                      "MedicationRequest/medicationrequest-id-111",
                    ],
                  },
                },
                {
                  "match": {
                    "someFieldThatTellsIfTheResourceIsActive": "AVAILABLE",
                  },
                },
              ],
            },
          },
          "size": 1000,
        },
      ],
    },
  ],
]
`;

exports[`typeSearch _revinclude queryParams={"_revinclude":["MedicationAdministration:request","Provenance:target"]}: search queries 1`] = `
[
  [
    {
      "body": {
        "query": {
          "bool": {
            "filter": [
              {
                "match": {
                  "someFieldThatTellsIfTheResourceIsActive": "AVAILABLE",
                },
              },
            ],
            "must": [],
          },
        },
      },
      "from": 0,
      "index": "medicationrequest-alias",
      "size": 20,
      "track_total_hits": true,
    },
  ],
]
`;

exports[`typeSearch _revinclude:iterate: msearch queries 1`] = `
[
  [
    {
      "body": [
        {
          "index": "medicationadministration-alias",
        },
        {
          "query": {
            "bool": {
              "filter": [
                {
                  "terms": {
                    "request.reference.keyword": [
                      "MedicationRequest/medicationrequest-id-111",
                    ],
                  },
                },
                {
                  "match": {
                    "someFieldThatTellsIfTheResourceIsActive": "AVAILABLE",
                  },
                },
              ],
            },
          },
          "size": 1000,
        },
      ],
    },
  ],
  [
    {
      "body": [
        {
          "index": "medicationstatement-alias",
        },
        {
          "query": {
            "bool": {
              "filter": [
                {
                  "terms": {
                    "partOf.reference.keyword": [
                      "MedicationAdministration/medication-administration-111",
                    ],
                  },
                },
                {
                  "match": {
                    "someFieldThatTellsIfTheResourceIsActive": "AVAILABLE",
                  },
                },
              ],
            },
          },
          "size": 1000,
        },
      ],
    },
  ],
]
`;

exports[`typeSearch _revinclude:iterate: search queries 1`] = `
[
  [
    {
      "body": {
        "query": {
          "bool": {
            "filter": [
              {
                "match": {
                  "someFieldThatTellsIfTheResourceIsActive": "AVAILABLE",
                },
              },
            ],
            "must": [],
          },
        },
      },
      "from": 0,
      "index": "medicationrequest-alias",
      "size": 20,
      "track_total_hits": true,
    },
  ],
]
`;

exports[`typeSearch Response format 1`] = `
{
  "result": {
    "entries": [
      {
        "fullUrl": "https://base-url.com/Patient/ab69afd3-39ed-42c3-9f77-8a718a247742",
        "resource": {
          "birthDate": "1995-09-24",
          "gender": "female",
          "id": "ab69afd3-39ed-42c3-9f77-8a718a247742",
          "resourceType": "Patient",
          "vid": "1",
        },
        "search": {
          "mode": "match",
        },
      },
    ],
    "message": "",
    "numberOfResults": 1,
  },
}
`;

exports[`typeSearch filter snapshots for simple filters - AND combination 1`] = `
[
  [
    {
      "body": {
        "query": {
          "bool": {
            "filter": [
              {
                "bool": {
                  "should": [
                    {
                      "match": {
                        "someFieldThatTellsIfTheResourceIsActive": "AVAILABLE",
                      },
                    },
                    {
                      "match": {
                        "someFieldThatTellsIfTheResourceIsActive": "PENDING",
                      },
                    },
                  ],
                },
              },
            ],
            "must": [],
          },
        },
      },
      "from": 0,
      "index": "patient-alias",
      "size": 20,
      "track_total_hits": true,
    },
  ],
]
`;

exports[`typeSearch filter snapshots for simple filters - OR combination 1`] = `
[
  [
    {
      "body": {
        "query": {
          "bool": {
            "filter": [
              {
                "bool": {
                  "should": [
                    {
                      "match": {
                        "someFieldThatTellsIfTheResourceIsActive": "AVAILABLE",
                      },
                    },
                    {
                      "match": {
                        "someFieldThatTellsIfTheResourceIsActive": "PENDING",
                      },
                    },
                  ],
                },
              },
            ],
            "must": [],
          },
        },
      },
      "from": 0,
      "index": "patient-alias",
      "size": 20,
      "track_total_hits": true,
    },
  ],
]
`;

exports[`typeSearch filter snapshots for simple filters - equal 1`] = `
[
  [
    {
      "body": {
        "query": {
          "bool": {
            "filter": [
              {
                "match": {
                  "someFieldThatTellsIfTheResourceIsActive": "AVAILABLE",
                },
              },
            ],
            "must": [],
          },
        },
      },
      "from": 0,
      "index": "patient-alias",
      "size": 20,
      "track_total_hits": true,
    },
  ],
]
`;

exports[`typeSearch filter snapshots for simple filters - greater than 1`] = `
[
  [
    {
      "body": {
        "query": {
          "bool": {
            "filter": [
              {
                "range": {
                  "age": {
                    "gt": "21",
                  },
                },
              },
            ],
            "must": [],
          },
        },
      },
      "from": 0,
      "index": "patient-alias",
      "size": 20,
      "track_total_hits": true,
    },
  ],
]
`;

exports[`typeSearch filter snapshots for simple filters - greater than or equal 1`] = `
[
  [
    {
      "body": {
        "query": {
          "bool": {
            "filter": [
              {
                "range": {
                  "age": {
                    "gte": "21",
                  },
                },
              },
            ],
            "must": [],
          },
        },
      },
      "from": 0,
      "index": "patient-alias",
      "size": 20,
      "track_total_hits": true,
    },
  ],
]
`;

exports[`typeSearch filter snapshots for simple filters - less than 1`] = `
[
  [
    {
      "body": {
        "query": {
          "bool": {
            "filter": [
              {
                "range": {
                  "age": {
                    "lt": "21",
                  },
                },
              },
            ],
            "must": [],
          },
        },
      },
      "from": 0,
      "index": "patient-alias",
      "size": 20,
      "track_total_hits": true,
    },
  ],
]
`;

exports[`typeSearch filter snapshots for simple filters - less than or equal 1`] = `
[
  [
    {
      "body": {
        "query": {
          "bool": {
            "filter": [
              {
                "range": {
                  "age": {
                    "lte": "21",
                  },
                },
              },
            ],
            "must": [],
          },
        },
      },
      "from": 0,
      "index": "patient-alias",
      "size": 20,
      "track_total_hits": true,
    },
  ],
]
`;

exports[`typeSearch filter snapshots for simple filters - not equal 1`] = `
[
  [
    {
      "body": {
        "query": {
          "bool": {
            "filter": [
              {
                "bool": {
                  "must_not": [
                    {
                      "term": {
                        "someFieldThatTellsIfTheResourceIsActive": "AVAILABLE",
                      },
                    },
                  ],
                },
              },
            ],
            "must": [],
          },
        },
      },
      "from": 0,
      "index": "patient-alias",
      "size": 20,
      "track_total_hits": true,
    },
  ],
]
`;

exports[`typeSearch multi-tenancy enabled: _include:iterate: msearch queries 1`] = `
[
  [
    {
      "body": [
        {
          "index": "patient-alias-tenant-tenant1",
        },
        {
          "query": {
            "bool": {
              "filter": [
                {
                  "terms": {
                    "id": [
                      "patient-id-333",
                    ],
                  },
                },
                {
                  "match": {
                    "someFieldThatTellsIfTheResourceIsActive": "AVAILABLE",
                  },
                },
                {
                  "match": {
                    "_tenantId": "tenant1",
                  },
                },
              ],
            },
          },
          "size": 1000,
        },
      ],
    },
  ],
  [
    {
      "body": [
        {
          "index": "organization-alias-tenant-tenant1",
        },
        {
          "query": {
            "bool": {
              "filter": [
                {
                  "terms": {
                    "id": [
                      "org-id-111",
                    ],
                  },
                },
                {
                  "match": {
                    "someFieldThatTellsIfTheResourceIsActive": "AVAILABLE",
                  },
                },
                {
                  "match": {
                    "_tenantId": "tenant1",
                  },
                },
              ],
            },
          },
          "size": 1000,
        },
      ],
    },
  ],
]
`;

exports[`typeSearch multi-tenancy enabled: _include:iterate: search queries 1`] = `
[
  [
    {
      "body": {
        "query": {
          "bool": {
            "filter": [
              {
                "match": {
                  "someFieldThatTellsIfTheResourceIsActive": "AVAILABLE",
                },
              },
              {
                "match": {
                  "_tenantId": "tenant1",
                },
              },
            ],
            "must": [],
          },
        },
      },
      "from": 0,
      "index": "medicationrequest-alias-tenant-tenant1",
      "size": 20,
      "track_total_hits": true,
    },
  ],
]
`;

exports[`typeSearch multi-tenancy enabled: _revinclude:iterate: msearch queries 1`] = `
[
  [
    {
      "body": [
        {
          "index": "medicationadministration-alias-tenant-tenant1",
        },
        {
          "query": {
            "bool": {
              "filter": [
                {
                  "terms": {
                    "request.reference.keyword": [
                      "MedicationRequest/medicationrequest-id-111",
                    ],
                  },
                },
                {
                  "match": {
                    "someFieldThatTellsIfTheResourceIsActive": "AVAILABLE",
                  },
                },
                {
                  "match": {
                    "_tenantId": "tenant1",
                  },
                },
              ],
            },
          },
          "size": 1000,
        },
      ],
    },
  ],
  [
    {
      "body": [
        {
          "index": "medicationstatement-alias-tenant-tenant1",
        },
        {
          "query": {
            "bool": {
              "filter": [
                {
                  "terms": {
                    "partOf.reference.keyword": [
                      "MedicationAdministration/medication-administration-111",
                    ],
                  },
                },
                {
                  "match": {
                    "someFieldThatTellsIfTheResourceIsActive": "AVAILABLE",
                  },
                },
                {
                  "match": {
                    "_tenantId": "tenant1",
                  },
                },
              ],
            },
          },
          "size": 1000,
        },
      ],
    },
  ],
]
`;

exports[`typeSearch multi-tenancy enabled: _revinclude:iterate: search queries 1`] = `
[
  [
    {
      "body": {
        "query": {
          "bool": {
            "filter": [
              {
                "match": {
                  "someFieldThatTellsIfTheResourceIsActive": "AVAILABLE",
                },
              },
              {
                "match": {
                  "_tenantId": "tenant1",
                },
              },
            ],
            "must": [],
          },
        },
      },
      "from": 0,
      "index": "medicationrequest-alias-tenant-tenant1",
      "size": 20,
      "track_total_hits": true,
    },
  ],
]
`;

exports[`typeSearch multi-tenancy enabled: simple queries queryParams={"_id":"11111111-1111-1111-1111-111111111111"} 1`] = `
[
  [
    {
      "body": {
        "query": {
          "bool": {
            "filter": [
              {
                "match": {
                  "someFieldThatTellsIfTheResourceIsActive": "AVAILABLE",
                },
              },
              {
                "match": {
                  "_tenantId": "tenant1",
                },
              },
            ],
            "must": [
              {
                "multi_match": {
                  "fields": [
                    "id.code",
                    "id.coding.code",
                    "id.value",
                    "id",
                  ],
                  "lenient": true,
                  "query": "11111111-1111-1111-1111-111111111111",
                },
              },
            ],
          },
        },
      },
      "from": 0,
      "index": "patient-alias-tenant-tenant1",
      "size": 20,
      "track_total_hits": true,
    },
  ],
]
`;

exports[`typeSearch multi-tenancy enabled: simple queries queryParams={"gender":"female","name":"Emily"} 1`] = `
[
  [
    {
      "body": {
        "query": {
          "bool": {
            "filter": [
              {
                "match": {
                  "someFieldThatTellsIfTheResourceIsActive": "AVAILABLE",
                },
              },
              {
                "match": {
                  "_tenantId": "tenant1",
                },
              },
            ],
            "must": [
              {
                "multi_match": {
                  "fields": [
                    "gender.code.keyword",
                    "gender.coding.code.keyword",
                    "gender.value.keyword",
                    "gender.keyword",
                    "gender",
                  ],
                  "lenient": true,
                  "query": "female",
                },
              },
              {
                "multi_match": {
                  "fields": [
                    "name",
                    "name.*",
                  ],
                  "lenient": true,
                  "query": "Emily",
                },
              },
            ],
          },
        },
      },
      "from": 0,
      "index": "patient-alias-tenant-tenant1",
      "size": 20,
      "track_total_hits": true,
    },
  ],
]
`;

exports[`typeSearch query snapshots for chained queryParams queryParams={"general-practitioner:PractitionerRole.location:Location.address-city":"Washington","organization.name":"HL7"} 1`] = `
[
  [
    {
      "body": {
        "_source": false,
        "fields": [
          "id",
        ],
        "query": {
          "bool": {
            "filter": [
              {
                "match": {
                  "someFieldThatTellsIfTheResourceIsActive": "AVAILABLE",
                },
              },
            ],
            "must": [
              {
                "multi_match": {
                  "fields": [
                    "address.city",
                    "address.city.*",
                  ],
                  "lenient": true,
                  "query": "Washington",
                },
              },
            ],
          },
        },
      },
      "index": "location-alias",
      "size": 100,
      "track_total_hits": true,
    },
  ],
  [
    {
      "body": {
        "_source": false,
        "fields": [
          "id",
        ],
        "query": {
          "bool": {
            "filter": [
              {
                "match": {
                  "someFieldThatTellsIfTheResourceIsActive": "AVAILABLE",
                },
              },
            ],
            "must": [
              {
                "terms": {
                  "location.reference.keyword": [
                    "Location/ab69afd3-39ed-42c3-9f77-8a718a247742",
                    "https://base-url.com/Location/ab69afd3-39ed-42c3-9f77-8a718a247742",
                  ],
                },
              },
            ],
          },
        },
      },
      "index": "practitionerrole-alias",
      "size": 100,
      "track_total_hits": true,
    },
  ],
  [
    {
      "body": {
        "_source": false,
        "fields": [
          "id",
        ],
        "query": {
          "bool": {
            "filter": [
              {
                "match": {
                  "someFieldThatTellsIfTheResourceIsActive": "AVAILABLE",
                },
              },
            ],
            "must": [
              {
                "bool": {
                  "should": [
                    {
                      "multi_match": {
                        "fields": [
                          "name",
                          "name.*",
                        ],
                        "lenient": true,
                        "query": "HL7",
                      },
                    },
                    {
                      "multi_match": {
                        "fields": [
                          "alias",
                          "alias.*",
                        ],
                        "lenient": true,
                        "query": "HL7",
                      },
                    },
                  ],
                },
              },
            ],
          },
        },
      },
      "index": "organization-alias",
      "size": 100,
      "track_total_hits": true,
    },
  ],
  [
    {
      "body": {
        "query": {
          "bool": {
            "filter": [
              {
                "match": {
                  "someFieldThatTellsIfTheResourceIsActive": "AVAILABLE",
                },
              },
            ],
            "must": [
              {
                "bool": {
                  "should": [
                    {
                      "terms": {
                        "generalPractitioner.reference.keyword": [
                          "PractitionerRole/ab69afd3-39ed-42c3-9f77-8a718a247742",
                          "https://base-url.com/PractitionerRole/ab69afd3-39ed-42c3-9f77-8a718a247742",
                        ],
                      },
                    },
                    {
                      "terms": {
                        "managingOrganization.reference.keyword": [
                          "Organization/ab69afd3-39ed-42c3-9f77-8a718a247742",
                          "https://base-url.com/Organization/ab69afd3-39ed-42c3-9f77-8a718a247742",
                        ],
                      },
                    },
                  ],
                },
              },
            ],
          },
        },
      },
      "from": 0,
      "index": "patient-alias",
      "size": 20,
      "track_total_hits": true,
    },
  ],
]
`;

exports[`typeSearch query snapshots for chained queryParams queryParams={"general-practitioner:PractitionerRole.location:Location.address-city":"Washington"} 1`] = `
[
  [
    {
      "body": {
        "_source": false,
        "fields": [
          "id",
        ],
        "query": {
          "bool": {
            "filter": [
              {
                "match": {
                  "someFieldThatTellsIfTheResourceIsActive": "AVAILABLE",
                },
              },
            ],
            "must": [
              {
                "multi_match": {
                  "fields": [
                    "address.city",
                    "address.city.*",
                  ],
                  "lenient": true,
                  "query": "Washington",
                },
              },
            ],
          },
        },
      },
      "index": "location-alias",
      "size": 100,
      "track_total_hits": true,
    },
  ],
  [
    {
      "body": {
        "_source": false,
        "fields": [
          "id",
        ],
        "query": {
          "bool": {
            "filter": [
              {
                "match": {
                  "someFieldThatTellsIfTheResourceIsActive": "AVAILABLE",
                },
              },
            ],
            "must": [
              {
                "terms": {
                  "location.reference.keyword": [
                    "Location/ab69afd3-39ed-42c3-9f77-8a718a247742",
                    "https://base-url.com/Location/ab69afd3-39ed-42c3-9f77-8a718a247742",
                  ],
                },
              },
            ],
          },
        },
      },
      "index": "practitionerrole-alias",
      "size": 100,
      "track_total_hits": true,
    },
  ],
  [
    {
      "body": {
        "query": {
          "bool": {
            "filter": [
              {
                "match": {
                  "someFieldThatTellsIfTheResourceIsActive": "AVAILABLE",
                },
              },
            ],
            "must": [
              {
                "bool": {
                  "should": [
                    {
                      "terms": {
                        "generalPractitioner.reference.keyword": [
                          "PractitionerRole/ab69afd3-39ed-42c3-9f77-8a718a247742",
                          "https://base-url.com/PractitionerRole/ab69afd3-39ed-42c3-9f77-8a718a247742",
                        ],
                      },
                    },
                  ],
                },
              },
            ],
          },
        },
      },
      "from": 0,
      "index": "patient-alias",
      "size": 20,
      "track_total_hits": true,
    },
  ],
]
`;

exports[`typeSearch query snapshots for chained queryParams queryParams={"link:Patient.birthdate":"ge2020-01-01","link:Patient.organization.name":"HL7"} 1`] = `
[
  [
    {
      "body": {
        "_source": false,
        "fields": [
          "id",
        ],
        "query": {
          "bool": {
            "filter": [
              {
                "match": {
                  "someFieldThatTellsIfTheResourceIsActive": "AVAILABLE",
                },
              },
            ],
            "must": [
              {
                "bool": {
                  "should": [
                    {
                      "range": {
                        "birthDate": {
                          "gte": 2020-01-01T00:00:00.000Z,
                        },
                      },
                    },
                    {
                      "bool": {
                        "must": [
                          {
                            "exists": {
                              "field": "birthDate.start",
                            },
                          },
                          {
                            "exists": {
                              "field": "birthDate.end",
                            },
                          },
                          {
                            "range": {
                              "birthDate.end": {
                                "gte": 2020-01-01T00:00:00.000Z,
                              },
                            },
                          },
                        ],
                      },
                    },
                  ],
                },
              },
            ],
          },
        },
      },
      "index": "patient-alias",
      "size": 100,
      "track_total_hits": true,
    },
  ],
  [
    {
      "body": {
        "_source": false,
        "fields": [
          "id",
        ],
        "query": {
          "bool": {
            "filter": [
              {
                "match": {
                  "someFieldThatTellsIfTheResourceIsActive": "AVAILABLE",
                },
              },
            ],
            "must": [
              {
                "bool": {
                  "should": [
                    {
                      "multi_match": {
                        "fields": [
                          "name",
                          "name.*",
                        ],
                        "lenient": true,
                        "query": "HL7",
                      },
                    },
                    {
                      "multi_match": {
                        "fields": [
                          "alias",
                          "alias.*",
                        ],
                        "lenient": true,
                        "query": "HL7",
                      },
                    },
                  ],
                },
              },
            ],
          },
        },
      },
      "index": "organization-alias",
      "size": 100,
      "track_total_hits": true,
    },
  ],
  [
    {
      "body": {
        "_source": false,
        "fields": [
          "id",
        ],
        "query": {
          "bool": {
            "filter": [
              {
                "match": {
                  "someFieldThatTellsIfTheResourceIsActive": "AVAILABLE",
                },
              },
            ],
            "must": [
              {
                "terms": {
                  "managingOrganization.reference.keyword": [
                    "Organization/ab69afd3-39ed-42c3-9f77-8a718a247742",
                    "https://base-url.com/Organization/ab69afd3-39ed-42c3-9f77-8a718a247742",
                  ],
                },
              },
            ],
          },
        },
      },
      "index": "patient-alias",
      "size": 100,
      "track_total_hits": true,
    },
  ],
  [
    {
      "body": {
        "query": {
          "bool": {
            "filter": [
              {
                "match": {
                  "someFieldThatTellsIfTheResourceIsActive": "AVAILABLE",
                },
              },
            ],
            "must": [
              {
                "bool": {
                  "should": [
                    {
                      "terms": {
                        "link.other.reference.keyword": [
                          "Patient/ab69afd3-39ed-42c3-9f77-8a718a247742",
                          "https://base-url.com/Patient/ab69afd3-39ed-42c3-9f77-8a718a247742",
                        ],
                      },
                    },
                  ],
                },
              },
            ],
          },
        },
      },
      "from": 0,
      "index": "patient-alias",
      "size": 20,
      "track_total_hits": true,
    },
  ],
]
`;

exports[`typeSearch query snapshots for chained queryParams with no matches queryParams={"general-practitioner:PractitionerRole.location:Location.address-city":"pwoiejfpow","organization.name":"wefgw"} 1`] = `
[
  [
    {
      "body": {
        "_source": false,
        "fields": [
          "id",
        ],
        "query": {
          "bool": {
            "filter": [
              {
                "match": {
                  "someFieldThatTellsIfTheResourceIsActive": "AVAILABLE",
                },
              },
            ],
            "must": [
              {
                "multi_match": {
                  "fields": [
                    "address.city",
                    "address.city.*",
                  ],
                  "lenient": true,
                  "query": "pwoiejfpow",
                },
              },
            ],
          },
        },
      },
      "index": "location-alias",
      "size": 100,
      "track_total_hits": true,
    },
  ],
  [
    {
      "body": {
        "_source": false,
        "fields": [
          "id",
        ],
        "query": {
          "bool": {
            "filter": [
              {
                "match": {
                  "someFieldThatTellsIfTheResourceIsActive": "AVAILABLE",
                },
              },
            ],
            "must": [
              {
                "bool": {
                  "should": [
                    {
                      "multi_match": {
                        "fields": [
                          "name",
                          "name.*",
                        ],
                        "lenient": true,
                        "query": "wefgw",
                      },
                    },
                    {
                      "multi_match": {
                        "fields": [
                          "alias",
                          "alias.*",
                        ],
                        "lenient": true,
                        "query": "wefgw",
                      },
                    },
                  ],
                },
              },
            ],
          },
        },
      },
      "index": "organization-alias",
      "size": 100,
      "track_total_hits": true,
    },
  ],
]
`;

exports[`typeSearch query snapshots for chained queryParams with no matches queryParams={"general-practitioner:PractitionerRole.location:Location.address-city":"wefw"} 1`] = `
[
  [
    {
      "body": {
        "_source": false,
        "fields": [
          "id",
        ],
        "query": {
          "bool": {
            "filter": [
              {
                "match": {
                  "someFieldThatTellsIfTheResourceIsActive": "AVAILABLE",
                },
              },
            ],
            "must": [
              {
                "multi_match": {
                  "fields": [
                    "address.city",
                    "address.city.*",
                  ],
                  "lenient": true,
                  "query": "wefw",
                },
              },
            ],
          },
        },
      },
      "index": "location-alias",
      "size": 100,
      "track_total_hits": true,
    },
  ],
]
`;

exports[`typeSearch query snapshots for chained queryParams with no matches queryParams={"link:Patient.birthdate":"ge2020-01-01","link:Patient.organization.name":"opwijeow"} 1`] = `
[
  [
    {
      "body": {
        "_source": false,
        "fields": [
          "id",
        ],
        "query": {
          "bool": {
            "filter": [
              {
                "match": {
                  "someFieldThatTellsIfTheResourceIsActive": "AVAILABLE",
                },
              },
            ],
            "must": [
              {
                "bool": {
                  "should": [
                    {
                      "range": {
                        "birthDate": {
                          "gte": 2020-01-01T00:00:00.000Z,
                        },
                      },
                    },
                    {
                      "bool": {
                        "must": [
                          {
                            "exists": {
                              "field": "birthDate.start",
                            },
                          },
                          {
                            "exists": {
                              "field": "birthDate.end",
                            },
                          },
                          {
                            "range": {
                              "birthDate.end": {
                                "gte": 2020-01-01T00:00:00.000Z,
                              },
                            },
                          },
                        ],
                      },
                    },
                  ],
                },
              },
            ],
          },
        },
      },
      "index": "patient-alias",
      "size": 100,
      "track_total_hits": true,
    },
  ],
  [
    {
      "body": {
        "_source": false,
        "fields": [
          "id",
        ],
        "query": {
          "bool": {
            "filter": [
              {
                "match": {
                  "someFieldThatTellsIfTheResourceIsActive": "AVAILABLE",
                },
              },
            ],
            "must": [
              {
                "bool": {
                  "should": [
                    {
                      "multi_match": {
                        "fields": [
                          "name",
                          "name.*",
                        ],
                        "lenient": true,
                        "query": "opwijeow",
                      },
                    },
                    {
                      "multi_match": {
                        "fields": [
                          "alias",
                          "alias.*",
                        ],
                        "lenient": true,
                        "query": "opwijeow",
                      },
                    },
                  ],
                },
              },
            ],
          },
        },
      },
      "index": "organization-alias",
      "size": 100,
      "track_total_hits": true,
    },
  ],
]
`;

exports[`typeSearch query snapshots for chained queryParams, multi-tenancy enabled queryParams={"general-practitioner:PractitionerRole.location:Location.address-city":"Washington"} 1`] = `
[
  [
    {
      "body": {
        "_source": false,
        "fields": [
          "id",
        ],
        "query": {
          "bool": {
            "filter": [
              {
                "match": {
                  "someFieldThatTellsIfTheResourceIsActive": "AVAILABLE",
                },
              },
              {
                "match": {
                  "_tenantId": "tenant1",
                },
              },
            ],
            "must": [
              {
                "multi_match": {
                  "fields": [
                    "address.city",
                    "address.city.*",
                  ],
                  "lenient": true,
                  "query": "Washington",
                },
              },
            ],
          },
        },
      },
      "index": "location-alias-tenant-tenant1",
      "size": 100,
      "track_total_hits": true,
    },
  ],
  [
    {
      "body": {
        "_source": false,
        "fields": [
          "id",
        ],
        "query": {
          "bool": {
            "filter": [
              {
                "match": {
                  "someFieldThatTellsIfTheResourceIsActive": "AVAILABLE",
                },
              },
              {
                "match": {
                  "_tenantId": "tenant1",
                },
              },
            ],
            "must": [
              {
                "terms": {
                  "location.reference.keyword": [
                    "Location/ab69afd3-39ed-42c3-9f77-8a718a247742",
                    "https://base-url.com/Location/ab69afd3-39ed-42c3-9f77-8a718a247742",
                  ],
                },
              },
            ],
          },
        },
      },
      "index": "practitionerrole-alias-tenant-tenant1",
      "size": 100,
      "track_total_hits": true,
    },
  ],
  [
    {
      "body": {
        "query": {
          "bool": {
            "filter": [
              {
                "match": {
                  "someFieldThatTellsIfTheResourceIsActive": "AVAILABLE",
                },
              },
              {
                "match": {
                  "_tenantId": "tenant1",
                },
              },
            ],
            "must": [
              {
                "bool": {
                  "should": [
                    {
                      "terms": {
                        "generalPractitioner.reference.keyword": [
                          "PractitionerRole/ab69afd3-39ed-42c3-9f77-8a718a247742",
                          "https://base-url.com/PractitionerRole/ab69afd3-39ed-42c3-9f77-8a718a247742",
                        ],
                      },
                    },
                  ],
                },
              },
            ],
          },
        },
      },
      "from": 0,
      "index": "patient-alias-tenant-tenant1",
      "size": 20,
      "track_total_hits": true,
    },
  ],
]
`;

exports[`typeSearch query snapshots for no queryParams, ACTIVE filter & changing filters filterParams=[] 1`] = `
[
  [
    {
      "body": {
        "query": {
          "bool": {
            "filter": [
              {
                "match": {
                  "someFieldThatTellsIfTheResourceIsActive": "AVAILABLE",
                },
              },
            ],
            "must": [],
          },
        },
      },
      "from": 0,
      "index": "patient-alias",
      "size": 20,
      "track_total_hits": true,
    },
  ],
]
`;

exports[`typeSearch query snapshots for no queryParams, ACTIVE filter & changing filters filterParams=[{"key":"_reference","logicalOperator":"OR","comparisonOperator":"==","value":["https://gdieqbxycl.execute-api.us-west-2.amazonaws.com/dev/Patient/3bdd8948-5e3b-4411-8f3f-d352a82bb07d","Patient/3bdd8948-5e3b-4411-8f3f-d352a82bb07d"]}] 1`] = `
[
  [
    {
      "body": {
        "query": {
          "bool": {
            "filter": [
              {
                "match": {
                  "someFieldThatTellsIfTheResourceIsActive": "AVAILABLE",
                },
              },
              {
                "bool": {
                  "should": [
                    {
                      "match": {
                        "_reference": "https://gdieqbxycl.execute-api.us-west-2.amazonaws.com/dev/Patient/3bdd8948-5e3b-4411-8f3f-d352a82bb07d",
                      },
                    },
                    {
                      "match": {
                        "_reference": "Patient/3bdd8948-5e3b-4411-8f3f-d352a82bb07d",
                      },
                    },
                  ],
                },
              },
            ],
            "must": [],
          },
        },
      },
      "from": 0,
      "index": "patient-alias",
      "size": 20,
      "track_total_hits": true,
    },
  ],
]
`;

exports[`typeSearch query snapshots for no queryParams, ACTIVE filter & changing filters filterParams=[{"key":"_reference","logicalOperator":"OR","comparisonOperator":"==","value":["https://gdieqbxycl.execute-api.us-west-2.amazonaws.com/dev/Patient/3bdd8948-5e3b-4411-8f3f-d352a82bb07d"]},{"key":"id","logicalOperator":"OR","comparisonOperator":"==","value":["3bdd8948-5e3b-4411-8f3f-d352a82bb07d"]},{"key":"gender","logicalOperator":"AND","comparisonOperator":"==","value":["male","female"]}] 1`] = `
[
  [
    {
      "body": {
        "query": {
          "bool": {
            "filter": [
              {
                "match": {
                  "someFieldThatTellsIfTheResourceIsActive": "AVAILABLE",
                },
              },
              {
                "bool": {
                  "should": [
                    {
                      "match": {
                        "gender": "male",
                      },
                    },
                    {
                      "match": {
                        "gender": "female",
                      },
                    },
                  ],
                },
              },
              {
                "bool": {
                  "should": [
                    {
                      "match": {
                        "_reference": "https://gdieqbxycl.execute-api.us-west-2.amazonaws.com/dev/Patient/3bdd8948-5e3b-4411-8f3f-d352a82bb07d",
                      },
                    },
                    {
                      "match": {
                        "id": "3bdd8948-5e3b-4411-8f3f-d352a82bb07d",
                      },
                    },
                  ],
                },
              },
            ],
            "must": [],
          },
        },
      },
      "from": 0,
      "index": "patient-alias",
      "size": 20,
      "track_total_hits": true,
    },
  ],
]
`;

exports[`typeSearch query snapshots for simple queryParams; with ACTIVE filter queryParams={"_count":"10","_getpagesoffset":"2","_id":"11111111-1111-1111-1111-111111111111","gender":"female","name":"Emily","_format":"json"} 1`] = `
[
  [
    {
      "body": {
        "query": {
          "bool": {
            "filter": [
              {
                "match": {
                  "someFieldThatTellsIfTheResourceIsActive": "AVAILABLE",
                },
              },
            ],
            "must": [
              {
                "multi_match": {
                  "fields": [
                    "id.code",
                    "id.coding.code",
                    "id.value",
                    "id",
                  ],
                  "lenient": true,
                  "query": "11111111-1111-1111-1111-111111111111",
                },
              },
              {
                "multi_match": {
                  "fields": [
                    "gender.code.keyword",
                    "gender.coding.code.keyword",
                    "gender.value.keyword",
                    "gender.keyword",
                    "gender",
                  ],
                  "lenient": true,
                  "query": "female",
                },
              },
              {
                "multi_match": {
                  "fields": [
                    "name",
                    "name.*",
                  ],
                  "lenient": true,
                  "query": "Emily",
                },
              },
            ],
          },
        },
      },
      "from": 2,
      "index": "patient-alias",
      "preference": "CUSTOMER_SESSION_ID",
      "size": 10,
      "track_total_hits": true,
    },
  ],
]
`;

exports[`typeSearch query snapshots for simple queryParams; with ACTIVE filter queryParams={"_count":"10","_getpagesoffset":"2","_sort":"_lastUpdated"} 1`] = `
[
  [
    {
      "body": {
        "query": {
          "bool": {
            "filter": [
              {
                "match": {
                  "someFieldThatTellsIfTheResourceIsActive": "AVAILABLE",
                },
              },
            ],
            "must": [],
          },
        },
        "sort": [
          {
            "meta.lastUpdated": {
              "order": "asc",
              "unmapped_type": "long",
            },
          },
          {
            "meta.lastUpdated.start": {
              "order": "asc",
              "unmapped_type": "long",
            },
          },
        ],
      },
      "from": 2,
      "index": "patient-alias",
      "preference": "CUSTOMER_SESSION_ID",
      "size": 10,
      "track_total_hits": true,
    },
  ],
]
`;

exports[`typeSearch query snapshots for simple queryParams; with ACTIVE filter queryParams={"_format":"json"} 1`] = `
[
  [
    {
      "body": {
        "query": {
          "bool": {
            "filter": [
              {
                "match": {
                  "someFieldThatTellsIfTheResourceIsActive": "AVAILABLE",
                },
              },
            ],
            "must": [],
          },
        },
      },
      "from": 0,
      "index": "patient-alias",
      "preference": "CUSTOMER_SESSION_ID",
      "size": 20,
      "track_total_hits": true,
    },
  ],
]
`;

exports[`typeSearch query snapshots for simple queryParams; with ACTIVE filter queryParams={"_id":"11111111-1111-1111-1111-111111111111"} 1`] = `
[
  [
    {
      "body": {
        "query": {
          "bool": {
            "filter": [
              {
                "match": {
                  "someFieldThatTellsIfTheResourceIsActive": "AVAILABLE",
                },
              },
            ],
            "must": [
              {
                "multi_match": {
                  "fields": [
                    "id.code",
                    "id.coding.code",
                    "id.value",
                    "id",
                  ],
                  "lenient": true,
                  "query": "11111111-1111-1111-1111-111111111111",
                },
              },
            ],
          },
        },
      },
      "from": 0,
      "index": "patient-alias",
      "preference": "CUSTOMER_SESSION_ID",
      "size": 20,
      "track_total_hits": true,
    },
  ],
]
`;

exports[`typeSearch query snapshots for simple queryParams; with ACTIVE filter queryParams={"_profile":"http://hl7.org/fhir/us/carin-bb/StructureDefinition/C4BB-ExplanationOfBenefit-Pharmacy"} 1`] = `
[
  [
    {
      "body": {
        "query": {
          "bool": {
            "filter": [
              {
                "match": {
                  "someFieldThatTellsIfTheResourceIsActive": "AVAILABLE",
                },
              },
            ],
            "must": [
              {
                "multi_match": {
                  "fields": [
                    "meta.profile.keyword",
                  ],
                  "lenient": true,
                  "query": "http://hl7.org/fhir/us/carin-bb/StructureDefinition/C4BB-ExplanationOfBenefit-Pharmacy",
                },
              },
            ],
          },
        },
      },
      "from": 0,
      "index": "patient-alias",
      "preference": "CUSTOMER_SESSION_ID",
      "size": 20,
      "track_total_hits": true,
    },
  ],
]
`;

exports[`typeSearch query snapshots for simple queryParams; with ACTIVE filter queryParams={"gender":"female","birthdate":"gt1990"} 1`] = `
[
  [
    {
      "body": {
        "query": {
          "bool": {
            "filter": [
              {
                "match": {
                  "someFieldThatTellsIfTheResourceIsActive": "AVAILABLE",
                },
              },
            ],
            "must": [
              {
                "multi_match": {
                  "fields": [
                    "gender.code.keyword",
                    "gender.coding.code.keyword",
                    "gender.value.keyword",
                    "gender.keyword",
                    "gender",
                  ],
                  "lenient": true,
                  "query": "female",
                },
              },
              {
                "bool": {
                  "should": [
                    {
                      "range": {
                        "birthDate": {
                          "gt": 1990-01-01T00:00:00.000Z,
                        },
                      },
                    },
                    {
                      "bool": {
                        "must": [
                          {
                            "exists": {
                              "field": "birthDate.start",
                            },
                          },
                          {
                            "exists": {
                              "field": "birthDate.end",
                            },
                          },
                          {
                            "range": {
                              "birthDate.end": {
                                "gte": 1990-01-01T00:00:00.000Z,
                              },
                            },
                          },
                        ],
                      },
                    },
                  ],
                },
              },
            ],
          },
        },
      },
      "from": 0,
      "index": "patient-alias",
      "preference": "CUSTOMER_SESSION_ID",
      "size": 20,
      "track_total_hits": true,
    },
  ],
]
`;

exports[`typeSearch query snapshots for simple queryParams; with ACTIVE filter queryParams={"gender":"female","identifier":"http://acme.org/patient|2345"} 1`] = `
[
  [
    {
      "body": {
        "query": {
          "bool": {
            "filter": [
              {
                "match": {
                  "someFieldThatTellsIfTheResourceIsActive": "AVAILABLE",
                },
              },
            ],
            "must": [
              {
                "multi_match": {
                  "fields": [
                    "gender.code.keyword",
                    "gender.coding.code.keyword",
                    "gender.value.keyword",
                    "gender.keyword",
                    "gender",
                  ],
                  "lenient": true,
                  "query": "female",
                },
              },
              {
                "bool": {
                  "must": [
                    {
                      "multi_match": {
                        "fields": [
                          "identifier.system.keyword",
                          "identifier.coding.system.keyword",
                        ],
                        "lenient": true,
                        "query": "http://acme.org/patient",
                      },
                    },
                    {
                      "multi_match": {
                        "fields": [
                          "identifier.code.keyword",
                          "identifier.coding.code.keyword",
                          "identifier.value.keyword",
                          "identifier.keyword",
                          "identifier",
                        ],
                        "lenient": true,
                        "query": "2345",
                      },
                    },
                  ],
                },
              },
            ],
          },
        },
      },
      "from": 0,
      "index": "patient-alias",
      "preference": "CUSTOMER_SESSION_ID",
      "size": 20,
      "track_total_hits": true,
    },
  ],
]
`;

exports[`typeSearch query snapshots for simple queryParams; with ACTIVE filter queryParams={"gender":"female","name":"Emily"} 1`] = `
[
  [
    {
      "body": {
        "query": {
          "bool": {
            "filter": [
              {
                "match": {
                  "someFieldThatTellsIfTheResourceIsActive": "AVAILABLE",
                },
              },
            ],
            "must": [
              {
                "multi_match": {
                  "fields": [
                    "gender.code.keyword",
                    "gender.coding.code.keyword",
                    "gender.value.keyword",
                    "gender.keyword",
                    "gender",
                  ],
                  "lenient": true,
                  "query": "female",
                },
              },
              {
                "multi_match": {
                  "fields": [
                    "name",
                    "name.*",
                  ],
                  "lenient": true,
                  "query": "Emily",
                },
              },
            ],
          },
        },
      },
      "from": 0,
      "index": "patient-alias",
      "preference": "CUSTOMER_SESSION_ID",
      "size": 20,
      "track_total_hits": true,
    },
  ],
]
`;

exports[`typeSearch query snapshots for simple queryParams; with ACTIVE filter queryParams={"gender":"female","name":"Emily,Smith"} 1`] = `
[
  [
    {
      "body": {
        "query": {
          "bool": {
            "filter": [
              {
                "match": {
                  "someFieldThatTellsIfTheResourceIsActive": "AVAILABLE",
                },
              },
            ],
            "must": [
              {
                "multi_match": {
                  "fields": [
                    "gender.code.keyword",
                    "gender.coding.code.keyword",
                    "gender.value.keyword",
                    "gender.keyword",
                    "gender",
                  ],
                  "lenient": true,
                  "query": "female",
                },
              },
              {
                "bool": {
                  "should": [
                    {
                      "multi_match": {
                        "fields": [
                          "name",
                          "name.*",
                        ],
                        "lenient": true,
                        "query": "Emily",
                      },
                    },
                    {
                      "multi_match": {
                        "fields": [
                          "name",
                          "name.*",
                        ],
                        "lenient": true,
                        "query": "Smith",
                      },
                    },
                  ],
                },
              },
            ],
          },
        },
      },
      "from": 0,
      "index": "patient-alias",
      "preference": "CUSTOMER_SESSION_ID",
      "size": 20,
      "track_total_hits": true,
    },
  ],
]
`;

exports[`typeSearch query snapshots for simple queryParams; with ACTIVE filter queryParams={"gender":"female","name":"Emily\\\\,Smith"} 1`] = `
[
  [
    {
      "body": {
        "query": {
          "bool": {
            "filter": [
              {
                "match": {
                  "someFieldThatTellsIfTheResourceIsActive": "AVAILABLE",
                },
              },
            ],
            "must": [
              {
                "multi_match": {
                  "fields": [
                    "gender.code.keyword",
                    "gender.coding.code.keyword",
                    "gender.value.keyword",
                    "gender.keyword",
                    "gender",
                  ],
                  "lenient": true,
                  "query": "female",
                },
              },
              {
                "multi_match": {
                  "fields": [
                    "name",
                    "name.*",
                  ],
                  "lenient": true,
                  "query": "Emily,Smith",
                },
              },
            ],
          },
        },
      },
      "from": 0,
      "index": "patient-alias",
      "preference": "CUSTOMER_SESSION_ID",
      "size": 20,
      "track_total_hits": true,
    },
  ],
]
`;

exports[`typeSearch query snapshots for simple queryParams; with ACTIVE filter queryParams={"gender":"female","name":["Emily","Smith"]} 1`] = `
[
  [
    {
      "body": {
        "query": {
          "bool": {
            "filter": [
              {
                "match": {
                  "someFieldThatTellsIfTheResourceIsActive": "AVAILABLE",
                },
              },
            ],
            "must": [
              {
                "multi_match": {
                  "fields": [
                    "gender.code.keyword",
                    "gender.coding.code.keyword",
                    "gender.value.keyword",
                    "gender.keyword",
                    "gender",
                  ],
                  "lenient": true,
                  "query": "female",
                },
              },
              {
                "multi_match": {
                  "fields": [
                    "name",
                    "name.*",
                  ],
                  "lenient": true,
                  "query": "Emily",
                },
              },
              {
                "multi_match": {
                  "fields": [
                    "name",
                    "name.*",
                  ],
                  "lenient": true,
                  "query": "Smith",
                },
              },
            ],
          },
        },
      },
      "from": 0,
      "index": "patient-alias",
      "preference": "CUSTOMER_SESSION_ID",
      "size": 20,
      "track_total_hits": true,
    },
  ],
]
`;

exports[`typeSearch query snapshots for simple queryParams; with ACTIVE filter queryParams={"gender":"female,male","name":"Emily"} 1`] = `
[
  [
    {
      "body": {
        "query": {
          "bool": {
            "filter": [
              {
                "match": {
                  "someFieldThatTellsIfTheResourceIsActive": "AVAILABLE",
                },
              },
            ],
            "must": [
              {
                "bool": {
                  "should": [
                    {
                      "multi_match": {
                        "fields": [
                          "gender.code.keyword",
                          "gender.coding.code.keyword",
                          "gender.value.keyword",
                          "gender.keyword",
                          "gender",
                        ],
                        "lenient": true,
                        "query": "female",
                      },
                    },
                    {
                      "multi_match": {
                        "fields": [
                          "gender.code.keyword",
                          "gender.coding.code.keyword",
                          "gender.value.keyword",
                          "gender.keyword",
                          "gender",
                        ],
                        "lenient": true,
                        "query": "male",
                      },
                    },
                  ],
                },
              },
              {
                "multi_match": {
                  "fields": [
                    "name",
                    "name.*",
                  ],
                  "lenient": true,
                  "query": "Emily",
                },
              },
            ],
          },
        },
      },
      "from": 0,
      "index": "patient-alias",
      "preference": "CUSTOMER_SESSION_ID",
      "size": 20,
      "track_total_hits": true,
    },
  ],
]
`;

exports[`typeSearch query snapshots for simple queryParams; with ACTIVE filter queryParams={"general-practitioner":"1234"} 1`] = `
[
  [
    {
      "body": {
        "query": {
          "bool": {
            "filter": [
              {
                "match": {
                  "someFieldThatTellsIfTheResourceIsActive": "AVAILABLE",
                },
              },
            ],
            "must": [
              {
                "terms": {
                  "generalPractitioner.reference.keyword": [
                    "https://base-url.com/Practitioner/1234",
                    "Practitioner/1234",
                    "https://base-url.com/Organization/1234",
                    "Organization/1234",
                    "https://base-url.com/PractitionerRole/1234",
                    "PractitionerRole/1234",
                  ],
                },
              },
            ],
          },
        },
      },
      "from": 0,
      "index": "patient-alias",
      "preference": "CUSTOMER_SESSION_ID",
      "size": 20,
      "track_total_hits": true,
    },
  ],
]
`;

exports[`typeSearch query snapshots for simple queryParams; with ACTIVE filter queryParams={"general-practitioner":"Practitioner/1234"} 1`] = `
[
  [
    {
      "body": {
        "query": {
          "bool": {
            "filter": [
              {
                "match": {
                  "someFieldThatTellsIfTheResourceIsActive": "AVAILABLE",
                },
              },
            ],
            "must": [
              {
                "terms": {
                  "generalPractitioner.reference.keyword": [
                    "Practitioner/1234",
                    "https://base-url.com/Practitioner/1234",
                  ],
                },
              },
            ],
          },
        },
      },
      "from": 0,
      "index": "patient-alias",
      "preference": "CUSTOMER_SESSION_ID",
      "size": 20,
      "track_total_hits": true,
    },
  ],
]
`;

exports[`typeSearch query snapshots for simple queryParams; with ACTIVE filter queryParams={"organization":"1234"} 1`] = `
[
  [
    {
      "body": {
        "query": {
          "bool": {
            "filter": [
              {
                "match": {
                  "someFieldThatTellsIfTheResourceIsActive": "AVAILABLE",
                },
              },
            ],
            "must": [
              {
                "terms": {
                  "managingOrganization.reference.keyword": [
                    "https://base-url.com/Organization/1234",
                    "Organization/1234",
                  ],
                },
              },
            ],
          },
        },
      },
      "from": 0,
      "index": "patient-alias",
      "preference": "CUSTOMER_SESSION_ID",
      "size": 20,
      "track_total_hits": true,
    },
  ],
]
`;

exports[`typeSearch query snapshots for simple queryParams; with ACTIVE filter queryParams={} 1`] = `
[
  [
    {
      "body": {
        "query": {
          "bool": {
            "filter": [
              {
                "match": {
                  "someFieldThatTellsIfTheResourceIsActive": "AVAILABLE",
                },
              },
            ],
            "must": [],
          },
        },
      },
      "from": 0,
      "index": "patient-alias",
      "preference": "CUSTOMER_SESSION_ID",
      "size": 20,
      "track_total_hits": true,
    },
  ],
]
`;

exports[`typeSearch query snapshots for simple queryParams; without ACTIVE filter queryParams={"_count":"10","_getpagesoffset":"2","_id":"11111111-1111-1111-1111-111111111111","gender":"female","name":"Emily","_format":"json"} 1`] = `
[
  [
    {
      "body": {
        "query": {
          "bool": {
            "filter": [],
            "must": [
              {
                "multi_match": {
                  "fields": [
                    "id.code",
                    "id.coding.code",
                    "id.value",
                    "id",
                  ],
                  "lenient": true,
                  "query": "11111111-1111-1111-1111-111111111111",
                },
              },
              {
                "multi_match": {
                  "fields": [
                    "gender.code.keyword",
                    "gender.coding.code.keyword",
                    "gender.value.keyword",
                    "gender.keyword",
                    "gender",
                  ],
                  "lenient": true,
                  "query": "female",
                },
              },
              {
                "multi_match": {
                  "fields": [
                    "name",
                    "name.*",
                  ],
                  "lenient": true,
                  "query": "Emily",
                },
              },
            ],
          },
        },
      },
      "from": 2,
      "index": "patient-alias",
      "size": 10,
      "track_total_hits": true,
    },
  ],
]
`;

exports[`typeSearch query snapshots for simple queryParams; without ACTIVE filter queryParams={} 1`] = `
[
  [
    {
      "body": {
        "query": {
          "bool": {
            "filter": [],
            "must": [],
          },
        },
      },
      "from": 0,
      "index": "patient-alias",
      "size": 20,
      "track_total_hits": true,
    },
  ],
]
`;

exports[`typeSearch search parameters with complex expressions queryParams={"depends-on":"Patient/something"} 1`] = `
[
  [
    {
      "body": {
        "query": {
          "bool": {
            "filter": [
              {
                "match": {
                  "someFieldThatTellsIfTheResourceIsActive": "AVAILABLE",
                },
              },
            ],
            "must": [
              {
                "bool": {
                  "must": [
                    {
                      "terms": {
                        "relatedArtifact.resource.reference.keyword": [
                          "Patient/something",
                          "https://base-url.com/Patient/something",
                        ],
                      },
                    },
                    {
                      "multi_match": {
                        "fields": [
                          "relatedArtifact.type",
                          "relatedArtifact.type.*",
                        ],
                        "lenient": true,
                        "query": "depends-on",
                      },
                    },
                  ],
                },
              },
            ],
          },
        },
      },
      "from": 0,
      "index": "library-alias",
      "size": 20,
      "track_total_hits": true,
    },
  ],
]
`;

exports[`typeSearch search parameters with complex expressions queryParams={"phone":"1234567"} 1`] = `
[
  [
    {
      "body": {
        "query": {
          "bool": {
            "filter": [
              {
                "match": {
                  "someFieldThatTellsIfTheResourceIsActive": "AVAILABLE",
                },
              },
            ],
            "must": [
              {
                "bool": {
                  "must": [
                    {
                      "multi_match": {
                        "fields": [
                          "telecom.code.keyword",
                          "telecom.coding.code.keyword",
                          "telecom.value.keyword",
                          "telecom.keyword",
                          "telecom",
                        ],
                        "lenient": true,
                        "query": "1234567",
                      },
                    },
                    {
                      "multi_match": {
                        "fields": [
                          "telecom.system",
                          "telecom.system.*",
                        ],
                        "lenient": true,
                        "query": "phone",
                      },
                    },
                  ],
                },
              },
            ],
          },
        },
      },
      "from": 0,
      "index": "patient-alias",
      "size": 20,
      "track_total_hits": true,
    },
  ],
]
`;

exports[`typeSearch search parameters with complex expressions queryParams={"relatedperson":"RelatedPerson/111"} 1`] = `
[
  [
    {
      "body": {
        "query": {
          "bool": {
            "filter": [
              {
                "match": {
                  "someFieldThatTellsIfTheResourceIsActive": "AVAILABLE",
                },
              },
            ],
            "must": [
              {
                "bool": {
                  "must": [
                    {
                      "terms": {
                        "link.target.reference.keyword": [
                          "RelatedPerson/111",
                          "https://base-url.com/RelatedPerson/111",
                        ],
                      },
                    },
                    {
                      "multi_match": {
                        "fields": [
                          "link.target",
                          "link.target.*",
                        ],
                        "lenient": true,
                        "query": "RelatedPerson",
                      },
                    },
                  ],
                },
              },
            ],
          },
        },
      },
      "from": 0,
      "index": "person-alias",
      "size": 20,
      "track_total_hits": true,
    },
  ],
]
`;

exports[`typeSearch search parameters with complex expressions queryParams={"value-string":"some value"} 1`] = `
[
  [
    {
      "body": {
        "query": {
          "bool": {
            "filter": [
              {
                "match": {
                  "someFieldThatTellsIfTheResourceIsActive": "AVAILABLE",
                },
              },
            ],
            "must": [
              {
                "bool": {
                  "should": [
                    {
                      "multi_match": {
                        "fields": [
                          "valueString",
                          "valueString.*",
                        ],
                        "lenient": true,
                        "query": "some value",
                      },
                    },
                    {
                      "multi_match": {
                        "fields": [
                          "valueCodeableConcept.text",
                          "valueCodeableConcept.text.*",
                        ],
                        "lenient": true,
                        "query": "some value",
                      },
                    },
                    {
                      "multi_match": {
                        "fields": [
                          "valueQuantity",
                          "valueQuantity.*",
                        ],
                        "lenient": true,
                        "query": "some value",
                      },
                    },
                    {
                      "multi_match": {
                        "fields": [
                          "valueCodeableConcept",
                          "valueCodeableConcept.*",
                        ],
                        "lenient": true,
                        "query": "some value",
                      },
                    },
                    {
                      "multi_match": {
                        "fields": [
                          "valueBoolean",
                          "valueBoolean.*",
                        ],
                        "lenient": true,
                        "query": "some value",
                      },
                    },
                    {
                      "multi_match": {
                        "fields": [
                          "valueInteger",
                          "valueInteger.*",
                        ],
                        "lenient": true,
                        "query": "some value",
                      },
                    },
                    {
                      "multi_match": {
                        "fields": [
                          "valueRange",
                          "valueRange.*",
                        ],
                        "lenient": true,
                        "query": "some value",
                      },
                    },
                    {
                      "multi_match": {
                        "fields": [
                          "valueRatio",
                          "valueRatio.*",
                        ],
                        "lenient": true,
                        "query": "some value",
                      },
                    },
                    {
                      "multi_match": {
                        "fields": [
                          "valueSampledData",
                          "valueSampledData.*",
                        ],
                        "lenient": true,
                        "query": "some value",
                      },
                    },
                    {
                      "multi_match": {
                        "fields": [
                          "valueTime",
                          "valueTime.*",
                        ],
                        "lenient": true,
                        "query": "some value",
                      },
                    },
                    {
                      "multi_match": {
                        "fields": [
                          "valueDateTime",
                          "valueDateTime.*",
                        ],
                        "lenient": true,
                        "query": "some value",
                      },
                    },
                    {
                      "multi_match": {
                        "fields": [
                          "valuePeriod",
                          "valuePeriod.*",
                        ],
                        "lenient": true,
                        "query": "some value",
                      },
                    },
                  ],
                },
              },
            ],
          },
        },
      },
      "from": 0,
      "index": "observation-alias",
      "size": 20,
      "track_total_hits": true,
    },
  ],
]
`;
